2001-04-28  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_X_FREETYPE: add XRENDERFONT ifdef

	* AcSplit/CF_X_FREETYPE: ci-aclocal generated header

2001-04-21  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_DIRNAME:
	ncurses: trim extra newlines, to avoid adding them in configure script

2001-04-18  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_CURSES_CPPFLAGS: oops - wrong $host_os case for sunos

	* AcSplit/CF_CURSES_LIBS: oops - wrong $host_os value for sunos.
	also, force -lcurses -ltermcap in that case (should incorporate real fixes)

2001-04-15  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_PROG_INSTALL: use CF_DIRNAME

	* AcSplit/CF_SLANG_CPPFLAGS: ci-aclocal generated header

	* AcSplit/CF_SLANG_CPPFLAGS: use CF_DIRNAME

	* AcSplit/CF_NCURSES_VERSION: changed this to use AC_CACHE_CHECK

	* AcSplit/CF_CURSES_LIBS: split-out the CF_CURSES_CPPFLAGS stuff

	* AcSplit/CF_CURSES_CPPFLAGS: RCS_BASE

	* AcSplit/CF_INCLUDE_PATH: ci-aclocal generated header

	* AcSplit/CF_INCLUDE_PATH: use CF_DIRNAME

	* AcSplit/CF_NCURSES_CPPFLAGS: nit

	* AcSplit/CF_DIRNAME: RCS_BASE

	* AcSplit/CF_NCURSES_CPPFLAGS:
	ded: rewrite to handle the case where ncurses is not installed in any of
	the standard locations, and we are using $CPPFLAGS to predefine its header
	location.  Also, change preference to look for ncurses.h rather than curses.h,
	since it's less likely that we chose the wrong header in that case.

2001-04-07  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_CPP_VSCAN_FUNC:
	ncurses: better check, don't need sstream header

	* AcSplit/CF_CPP_VSCAN_FUNC: RCS_BASE

	* AcSplit/CF_CPP_PARAM_INIT: ci-aclocal generated header

	* AcSplit/CF_CPP_PARAM_INIT:
	oops: why was I still checking if $CXX is 'yes'?
	also, save/restore language to make this more reusable

2001-04-01  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_TERMCAP_LIBS:
	change this to return a warning if not found, since slang (which uses this
	macro) may not need it (lynx)
