@@ -1,4 +1,4 @@
-MANIFEST for my-autoconf, version t20010428
+MANIFEST for my-autoconf, version t20010502
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 config.guess                    autoconf's config.guess
